updating with reviews suggested

--- a/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass-batch-scoring/auto-ml-image-classification-multiclass-batch-scoring.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass-batch-scoring/auto-ml-image-classification-multiclass-batch-scoring.ipynb
@@ -263,9 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Retrieving default datastore that got automatically created when we setup a workspace\n",
@@ -360,9 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "automl_image_run.wait_for_completion(wait_post_processing=True)"
@@ -520,9 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# View the batch scoring script. Use the model settings as appropriate for your model.\n",
@@ -608,9 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
@@ -684,9 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Wait the run for completion and show output log to console\n",
@@ -703,9 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tempfile\n",
@@ -776,9 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -829,9 +815,9 @@
     "from PIL import Image\n",
     "\n",
     "\n",
-    "def base64_to_img(base64ImgString):\n",
-    "    base64Img = base64ImgString.encode('utf-8')\n",
-    "    decoded_img = base64.b64decode(base64Img)\n",
+    "def base64_to_img(base64_img_str):\n",
+    "    base64_img = base64_img_str.encode('utf-8')\n",
+    "    decoded_img = base64.b64decode(base64_img)\n",
     "    return BytesIO(decoded_img).getvalue()\n",
     "\n",
     "\n",
