--- a/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass/auto-ml-image-classification-multiclass.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass/auto-ml-image-classification-multiclass.ipynb
@@ -456,7 +456,7 @@
     "}\n",
     "\n",
     "tuning_settings = {\n",
-    "    \"iterations\": 1,\n",
+    "    \"iterations\": 10,\n",
     "    \"max_concurrent_iterations\": 2,\n",
     "    \"hyperparameter_sampling\": RandomParameterSampling(parameter_space),\n",
     "    \"early_termination_policy\": BanditPolicy(\n",
@@ -656,15 +656,15 @@
     "    \"\"\"Load and convert pillow image to base64-encoded image\"\"\"\n",
     "\n",
     "    img = Image.open(img_path)\n",
-    "    imgio = BytesIO()\n",
-    "    img.save(imgio, img.format)\n",
-    "    img_str = base64.b64encode(imgio.getvalue())\n",
+    "    img_io = BytesIO()\n",
+    "    img.save(img_io, img.format)\n",
+    "    img_str = base64.b64encode(img_io.getvalue())\n",
     "    return img_str.decode('utf-8')\n",
     "\n",
     "\n",
-    "def base64_to_img(base64ImgString):\n",
-    "    base64Img = base64ImgString.encode('utf-8')\n",
-    "    decoded_img = base64.b64decode(base64Img)\n",
+    "def base64_to_img(base64_img_str):\n",
+    "    base64_img = base64_img_str.encode('utf-8')\n",
+    "    decoded_img = base64.b64decode(base64_img)\n",
     "    return BytesIO(decoded_img).getvalue()"
    ]
   },
@@ -706,9 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sample_image = \"./test_image_1.jpg\"\n",
@@ -775,9 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -817,10 +813,10 @@
    "source": [
     "### Generate Explanations\n",
     "- Explainability methods:\n",
-    "   - xrai\n",
-    "   - integratedgradients\n",
-    "   - guidedgradcam\n",
-    "   - guidedbackprop"
+    "   - [XRAI](https://arxiv.org/abs/1906.02825) (xrai)\n",
+    "   - [Integrated Gradients](https://arxiv.org/pdf/1703.01365.pdf) (integratedgradients)\n",
+    "   - [Guided GradCAM](https://arxiv.org/pdf/1610.02391.pdf) (guidedgradcam)\n",
+    "   - [Guided BackPropagation](https://arxiv.org/pdf/1412.6806.pdf) (guidedbackprop)"
    ]
   },
   {
@@ -833,9 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sample_image = \"./test_image_1.jpg\"\n",
@@ -903,9 +897,9 @@
  ],
  "metadata": {
   "kernelspec": {
-    "display_name": "Python 3.8 - AzureML",
-    "language": "python",
-    "name": "python38-azureml"
+   "display_name": "Python 3.8 - AzureML",
+   "language": "python",
+   "name": "python38-azureml"
   },
   "language_info": {
    "codemirror_mode": {
