--- a/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-batch-scoring/image-classification-multiclass-batch-scoring-non-mlflow-model.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-batch-scoring/image-classification-multiclass-batch-scoring-non-mlflow-model.ipynb
@@ -695,9 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# View the batch scoring script. Use the model settings as appropriate for your model.\n",
@@ -1000,9 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -1052,9 +1048,9 @@
     "from io import BytesIO\n",
     "\n",
     "\n",
-    "def base64_to_img(base64ImgString):\n",
-    "    base64Img = base64ImgString.encode('utf-8')\n",
-    "    decoded_img = base64.b64decode(base64Img)\n",
+    "def base64_to_img(base64_img_str):\n",
+    "    base64_img = base64_img_str.encode('utf-8')\n",
+    "    decoded_img = base64.b64decode(base64_img)\n",
     "    return BytesIO(decoded_img).getvalue()\n",
     "\n",
     "\n",
