--- a/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items-mlflow.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items-mlflow.ipynb
@@ -566,7 +566,7 @@
     ")\n",
     "\n",
     "image_classification_job.set_sweep(\n",
-    "    max_trials=1,\n",
+    "    max_trials=10,\n",
     "    max_concurrent_trials=2,\n",
     "    sampling_algorithm=\"Random\",\n",
     "    early_termination=BanditPolicy(\n",
@@ -1091,9 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -1131,7 +1129,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate the Scores and Explanations"
+    "### Generate the Scores and Explanations\n",
+    "- Explainability methods:\n",
+    "   - [XRAI](https://arxiv.org/abs/1906.02825) (xrai)\n",
+    "   - [Integrated Gradients](https://arxiv.org/pdf/1703.01365.pdf) (integratedgradients)\n",
+    "   - [Guided GradCAM](https://arxiv.org/pdf/1610.02391.pdf) (guidedgradcam)\n",
+    "   - [Guided BackPropagation](https://arxiv.org/pdf/1412.6806.pdf) (guidedbackprop)"
    ]
   },
   {
@@ -1174,9 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "resp = ml_client.online_endpoints.invoke(\n",
@@ -1205,9 +1206,9 @@
     "from PIL import Image\n",
     "\n",
     "\n",
-    "def base64_to_img(base64ImgString):\n",
-    "    base64Img = base64ImgString.encode('utf-8')\n",
-    "    decoded_img = base64.b64decode(base64Img)\n",
+    "def base64_to_img(base64_img_str):\n",
+    "    base64_img = base64_img_str.encode('utf-8')\n",
+    "    decoded_img = base64.b64decode(base64_img)\n",
     "    return BytesIO(decoded_img).getvalue()\n",
     "\n",
     "\n",
@@ -1272,9 +1273,9 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-    "display_name": "Python 3.8 - AzureML",
-    "language": "python",
-    "name": "python38-azureml"
+   "display_name": "Python 3.8 - AzureML",
+   "language": "python",
+   "name": "python38-azureml"
   },
   "language_info": {
    "codemirror_mode": {
