--- a/sdk/jobs/automl-standalone-jobs/automl-image-classification-multilabel-task-fridge-items/automl-image-classification-multilabel-task-fridge-items-mlflow.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-classification-multilabel-task-fridge-items/automl-image-classification-multilabel-task-fridge-items-mlflow.ipynb
@@ -553,7 +553,7 @@
     ")\n",
     "\n",
     "image_classification_multilabel_job.set_sweep(\n",
-    "    max_trials=1,\n",
+    "    max_trials=10,\n",
     "    max_concurrent_trials=2,\n",
     "    sampling_algorithm=\"Random\",\n",
     "    early_termination=BanditPolicy(\n",
@@ -1077,9 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -1119,7 +1117,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate the Scores and Explanations"
+    "### Generate the Scores and Explanations\n",
+    "- Explainability methods:\n",
+    "   - [XRAI](https://arxiv.org/abs/1906.02825) (xrai)\n",
+    "   - [Integrated Gradients](https://arxiv.org/pdf/1703.01365.pdf) (integratedgradients)\n",
+    "   - [Guided GradCAM](https://arxiv.org/pdf/1610.02391.pdf) (guidedgradcam)\n",
+    "   - [Guided BackPropagation](https://arxiv.org/pdf/1412.6806.pdf) (guidedbackprop)"
    ]
   },
   {
@@ -1188,9 +1191,9 @@
     "from PIL import Image\n",
     "\n",
     "\n",
-    "def base64_to_img(base64ImgString):\n",
-    "    base64Img = base64ImgString.encode('utf-8')\n",
-    "    decoded_img = base64.b64decode(base64Img)\n",
+    "def base64_to_img(base64_img_str):\n",
+    "    base64_img = base64_img_str.encode('utf-8')\n",
+    "    decoded_img = base64.b64decode(base64_img)\n",
     "    return BytesIO(decoded_img).getvalue()\n",
     "\n",
     "# visualize explanations of the first image against one of the class\n",
