--- a/python-sdk/tutorials/automl-with-azureml/image-classification-multilabel/auto-ml-image-classification-multilabel.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-classification-multilabel/auto-ml-image-classification-multilabel.ipynb
@@ -429,8 +429,8 @@
    "source": [
     "from azureml.automl.core.shared.constants import ImageTask\n",
     "from azureml.train.automl import AutoMLImageConfig\n",
-    "from azureml.train.hyperdrive import BanditPolicy, RandomParameterSampling\n",
-    "from azureml.train.hyperdrive import choice, uniform\n",
+    "from azureml.train.hyperdrive import (BanditPolicy, RandomParameterSampling,\n",
+    "                                      choice, uniform)\n",
     "\n",
     "parameter_space = {\n",
     "    \"learning_rate\": uniform(0.005, 0.05),\n",
@@ -451,60 +451,12 @@
     "}\n",
     "\n",
     "tuning_settings = {\n",
-    "    \"iterations\": 1,\n",
+    "    \"iterations\": 10,\n",
     "    \"max_concurrent_iterations\": 2,\n",
     "    \"hyperparameter_sampling\": RandomParameterSampling(parameter_space),\n",
     "    \"early_termination_policy\": BanditPolicy(\n",
     "        evaluation_interval=2, slack_factor=0.2, delay_evaluation=6\n",
     "    ),\n",
-    "}\n",
-    "\n",
-    "automl_image_config = AutoMLImageConfig(\n",
-    "    task=ImageTask.IMAGE_CLASSIFICATION_MULTILABEL,\n",
-    "    compute_target=compute_target,\n",
-    "    training_data=training_dataset,\n",
-    "    validation_data=validation_dataset,\n",
-    "    **tuning_settings,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from azureml.automl.core.shared.constants import ImageTask\n",
-    "from azureml.train.automl import AutoMLImageConfig\n",
-    "from azureml.train.hyperdrive import BanditPolicy, RandomParameterSampling\n",
-    "from azureml.train.hyperdrive import choice, uniform\n",
-    "\n",
-    "parameter_space = {\n",
-    "    \"learning_rate\": uniform(0.005, 0.05),\n",
-    "    \"model\": choice(\n",
-    "        {\n",
-    "            \"model_name\": choice(\"vitb16r224\"),\n",
-    "            \"number_of_epochs\": choice(15, 30),\n",
-    "            \"grad_accumulation_step\": choice(1, 2),\n",
-    "        },\n",
-    "        {\n",
-    "            \"model_name\": choice(\"seresnext\"),\n",
-    "            # model-specific, valid_resize_size should be larger or equal than valid_crop_size\n",
-    "            \"valid_resize_size\": choice(288, 320, 352),\n",
-    "            \"valid_crop_size\": choice(224, 256),  # model-specific\n",
-    "            \"train_crop_size\": choice(224, 256),  # model-specific\n",
-    "        },\n",
-    "    ),\n",
-    "}\n",
-    "\n",
-    "tuning_settings = {\n",
-    "    \"iterations\": 1,\n",
-    "    \"max_concurrent_iterations\": 2,\n",
-    "    \"hyperparameter_sampling\": RandomParameterSampling(parameter_space),\n",
-    "    \"early_termination_policy\": BanditPolicy(\n",
-    "        evaluation_interval=2, slack_factor=0.2, delay_evaluation=6\n",
-    "    ),\n",
-    "    'scenario': \"Vision-Candidate\"\n",
     "}\n",
     "\n",
     "automl_image_config = AutoMLImageConfig(\n",
@@ -699,15 +651,15 @@
     "    \"\"\"Load and convert pillow image to base64-encoded image\"\"\"\n",
     "\n",
     "    img = Image.open(img_path)\n",
-    "    imgio = BytesIO()\n",
-    "    img.save(imgio, img.format)\n",
-    "    img_str = base64.b64encode(imgio.getvalue())\n",
+    "    img_io = BytesIO()\n",
+    "    img.save(img_io, img.format)\n",
+    "    img_str = base64.b64encode(img_io.getvalue())\n",
     "    return img_str.decode('utf-8')\n",
     "\n",
     "\n",
-    "def base64_to_img(base64ImgString):\n",
-    "    base64Img = base64ImgString.encode('utf-8')\n",
-    "    decoded_img = base64.b64decode(base64Img)\n",
+    "def base64_to_img(base64_img_str):\n",
+    "    base64_img = base64_img_str.encode('utf-8')\n",
+    "    decoded_img = base64.b64decode(base64_img)\n",
     "    return BytesIO(decoded_img).getvalue()"
    ]
   },
@@ -718,7 +670,6 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "# from IPython.display import Image\n",
     "\n",
     "# URL for the web service\n",
     "scoring_uri = aks_service.scoring_uri\n",
@@ -818,9 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -862,18 +811,16 @@
    "source": [
     "### Generate Explanations\n",
     "- Explainability methods:\n",
-    "   - xrai\n",
-    "   - integratedgradients\n",
-    "   - guidedgradcam\n",
-    "   - guidedbackprop"
+    "   - [XRAI](https://arxiv.org/abs/1906.02825) (xrai)\n",
+    "   - [Integrated Gradients](https://arxiv.org/pdf/1703.01365.pdf) (integratedgradients)\n",
+    "   - [Guided GradCAM](https://arxiv.org/pdf/1610.02391.pdf) (guidedgradcam)\n",
+    "   - [Guided BackPropagation](https://arxiv.org/pdf/1412.6806.pdf) (guidedbackprop)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sample_image = \"./test_image_1.jpg\"\n",
@@ -942,9 +889,9 @@
  ],
  "metadata": {
   "kernelspec": {
-    "display_name": "Python 3.8 - AzureML",
-    "language": "python",
-    "name": "python38-azureml"
+   "display_name": "Python 3.8 - AzureML",
+   "language": "python",
+   "name": "python38-azureml"
   },
   "language_info": {
    "codemirror_mode": {
