--- a/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass/auto-ml-image-classification-multiclass.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass/auto-ml-image-classification-multiclass.ipynb
@@ -889,8 +889,8 @@
    "outputs": [],
    "source": [
     "# visualize explanations of the first image for the class with highest confidence score\n",
-    "img = base64_to_img(predictions[0]['visualizations'])\n",
-    "image = Image.open(BytesIO(img))\n",
+    "img_bytes = base64_to_img(predictions[0]['visualizations'])\n",
+    "image = Image.open(BytesIO(img_bytes))\n",
     "image.show()"
    ]
   }
