--- a/python-sdk/tutorials/automl-with-azureml/image-classification-multilabel/auto-ml-image-classification-multilabel.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-classification-multilabel/auto-ml-image-classification-multilabel.ipynb
@@ -880,9 +880,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# visualize explanations of the first image against one of the class\n",
-    "img = base64_to_img(predictions[0]['visualizations'][0])\n",
-    "image = Image.open(BytesIO(img))\n",
+    "# visualize explanations of the first image against one of the classes\n",
+    "img_bytes = base64_to_img(predictions[0]['visualizations'][0])\n",
+    "image = Image.open(BytesIO(img_bytes))\n",
     "image.show()"
    ]
   }
