--- a/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-batch-scoring/image-classification-multiclass-batch-scoring-non-mlflow-model.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-batch-scoring/image-classification-multiclass-batch-scoring-non-mlflow-model.ipynb
@@ -1054,8 +1054,8 @@
     "    return BytesIO(decoded_img).getvalue()\n",
     "\n",
     "\n",
-    "img = base64_to_img(prediction['visualizations'])\n",
-    "image = Image.open(BytesIO(img))\n",
+    "img_bytes = base64_to_img(prediction['visualizations'])\n",
+    "image = Image.open(BytesIO(img_bytes))\n",
     "image.show()"
    ]
   },
