--- a/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items-mlflow.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items-mlflow.ipynb
@@ -1213,8 +1213,8 @@
     "\n",
     "\n",
     "# visualize explanations of the first image against one of the class\n",
-    "img = base64_to_img(predictions[0]['visualizations'])\n",
-    "image = Image.open(BytesIO(img))\n",
+    "img_bytes = base64_to_img(predictions[0]['visualizations'])\n",
+    "image = Image.open(BytesIO(img_bytes))\n",
     "image.show()"
    ]
   },
