--- a/sdk/jobs/automl-standalone-jobs/automl-image-classification-multilabel-task-fridge-items/automl-image-classification-multilabel-task-fridge-items-mlflow.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-classification-multilabel-task-fridge-items/automl-image-classification-multilabel-task-fridge-items-mlflow.ipynb
@@ -1196,9 +1196,9 @@
     "    decoded_img = base64.b64decode(base64_img)\n",
     "    return BytesIO(decoded_img).getvalue()\n",
     "\n",
-    "# visualize explanations of the first image against one of the class\n",
-    "img = base64_to_img(predictions[0]['visualizations'][0])\n",
-    "image = Image.open(BytesIO(img))\n",
+    "# visualize explanations of the first image against one of the classes\n",
+    "img_bytes = base64_to_img(predictions[0]['visualizations'][0])\n",
+    "image = Image.open(BytesIO(img_bytes))\n",
     "image.show()"
    ]
   },
