v1 remove mini batch support for online inference

--- a/python-sdk/tutorials/automl-with-azureml/image-classification-multilabel/auto-ml-image-classification-multilabel.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-classification-multilabel/auto-ml-image-classification-multilabel.ipynb
@@ -739,29 +739,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Inference on multiple images in base64 format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
-    "json_data = json.dumps(\n",
-    "    {\"image\": [img_to_base64(img_path) for img_path in sample_images]}\n",
-    ")\n",
-    "resp = requests.post(scoring_uri, json_data, headers=headers)\n",
-    "predictions = json.loads(\"[{}]\".format(resp.text.replace(\"}{\", \"},{\")))\n",
-    "\n",
-    "predictions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Visualize predictions\n",
     "Now that we have scored a test image, we can visualize the predictions for this image"
    ]
@@ -818,6 +795,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate explanations for one input image in base64 format"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -826,43 +810,15 @@
     "sample_image = \"./test_image_1.jpg\"\n",
     "\n",
     "# Define explainability (XAI) parameters\n",
-    "xai_parameters = {'xai_algorithm': 'guidedbackprop', 'visualizations': True, 'attributions': False}\n",
+    "xai_parameters = {'xai_algorithm': 'guidedbackprop',\n",
+    "                  'visualizations': True, 'attributions': False,\n",
+    "                  'confidence_score_threshold_multilabel': 0.8}\n",
     "\n",
     "json_data = json.dumps({'image': img_to_base64(sample_image),\n",
     "                        'model_explainability': True,\n",
     "                        'xai_parameters': xai_parameters})\n",
     "resp = requests.post(scoring_uri, json_data, headers=headers)\n",
     "predictions = json.loads(resp.text)\n",
-    "predictions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Generate explanations for multiple images in base64 format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
-    "\n",
-    "# Define explainability (XAI) parameters\n",
-    "xai_parameters = {'xai_algorithm': 'guidedbackprop',\n",
-    "                  'visualizations': True,\n",
-    "                  'attributions': False,\n",
-    "                  'confidence_score_threshold_multilabel': 0.8}\n",
-    "\n",
-    "json_data = json.dumps({'image': [img_to_base64(img_path) for img_path in sample_images],\n",
-    "                        'model_explainability': True,\n",
-    "                        'xai_parameters': xai_parameters\n",
-    "                       })\n",
-    "resp = requests.post(scoring_uri, json_data, headers=headers)\n",
-    "predictions = json.loads(\"[{}]\".format(resp.text.replace('}{', '},{')))\n",
     "predictions"
    ]
   },
