--- a/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items-mlflow.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items-mlflow.ipynb
@@ -1036,17 +1036,16 @@
     "# Create request json\n",
     "import base64\n",
     "\n",
-    "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
+    "sample_image = \"./test_image_1.jpg\"\n",
     "\n",
     "def read_image(image_path):\n",
     "    with open(image_path, \"rb\") as f:\n",
     "        return f.read()\n",
     "\n",
-    "\n",
     "request_json = {\n",
     "    \"input_data\": {\n",
     "        \"columns\": [\"image_details\"],\n",
-    "        \"data\": [[{'image': base64.encodebytes(read_image(img_path)).decode(\"utf-8\")}] for img_path in sample_images],\n",
+    "        \"data\": [[{'image': base64.encodebytes(read_image(sample_image)).decode(\"utf-8\")}]],\n",
     "    }\n",
     "}"
    ]
@@ -1103,7 +1102,7 @@
     "\n",
     "IMAGE_SIZE = (18, 12)\n",
     "plt.figure(figsize=IMAGE_SIZE)\n",
-    "img_np = mpimg.imread(sample_images[0])\n",
+    "img_np = mpimg.imread(sample_image)\n",
     "img = Image.fromarray(img_np.astype(\"uint8\"), \"RGB\")\n",
     "x, y = img.size\n",
     "\n",
@@ -1143,7 +1142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
+    "sample_image = \"./test_image_1.jpg\"\n",
     "\n",
     "# Define explainability (XAI) parameters\n",
     "model_explainability = True\n",
@@ -1153,9 +1152,9 @@
     "    \n",
     "    \"input_data\": {\n",
     "        \"columns\": [\"image_details\"],\n",
-    "        \"data\": [[{'image': base64.encodebytes(read_image(img_path)).decode(\"utf-8\"),\n",
+    "        \"data\": [[{'image': base64.encodebytes(read_image(sample_image)).decode(\"utf-8\"),\n",
     "                   \"model_explainability\": model_explainability,\n",
-    "                   'xai_parameters': xai_parameters}] for img_path in sample_images],\n",
+    "                   'xai_parameters': xai_parameters}]],\n",
     "    }\n",
     "}"
    ]
