--- a/sdk/jobs/automl-standalone-jobs/automl-image-instance-segmentation-task-fridge-items/automl-image-instance-segmentation-task-fridge-items-mlflow.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-instance-segmentation-task-fridge-items/automl-image-instance-segmentation-task-fridge-items-mlflow.ipynb
@@ -991,18 +991,16 @@
     "# Create request json\n",
     "import base64\n",
     "\n",
-    "sample_images = [\"./test_image_1.jpg\", \"./test_image_2.jpg\"]\n",
-    "\n",
+    "sample_image = \"./test_image_1.jpg\"\n",
     "\n",
     "def read_image(image_path):\n",
     "    with open(image_path, \"rb\") as f:\n",
     "        return f.read()\n",
     "\n",
-    "\n",
     "request_json = {\n",
     "    \"input_data\": {\n",
     "        \"columns\": [\"image_details\"],\n",
-    "        \"data\": [[{'image': base64.encodebytes(read_image(img_path)).decode(\"utf-8\")}] for img_path in sample_images],\n",
+    "        \"data\": [[{'image': base64.encodebytes(read_image(sample_image)).decode(\"utf-8\")}]],\n",
     "    }\n",
     "}"
    ]
