--- a/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass/auto-ml-image-classification-multiclass.ipynb
+++ b/python-sdk/tutorials/automl-with-azureml/image-classification-multiclass/auto-ml-image-classification-multiclass.ipynb
@@ -812,7 +812,8 @@
     "sample_image = \"./test_image_1.jpg\"\n",
     "\n",
     "# Define explainability (XAI) parameters\n",
-    "xai_parameters = {'xai_algorithm': 'guidedbackprop', 'visualizations': True, 'attributions': False}\n",
+    "xai_parameters = {'xai_algorithm': 'guidedbackprop',\n",
+    "                  'visualizations': True, 'attributions': False}\n",
     "\n",
     "json_data = json.dumps({'image': img_to_base64(sample_image),\n",
     "                        'model_explainability': True,\n",
@@ -820,7 +821,7 @@
     "\n",
     "resp = requests.post(scoring_uri, json_data, headers=headers)\n",
     "predictions = json.loads(resp.text)\n",
-    "predictions"
+    "predictions\n"
    ]
   },
   {
