--- a/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items-mlflow.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-classification-multiclass-task-fridge-items/automl-image-classification-multiclass-task-fridge-items-mlflow.ipynb
@@ -1146,17 +1146,19 @@
     "\n",
     "# Define explainability (XAI) parameters\n",
     "model_explainability = True\n",
-    "xai_parameters = {\"xai_algorithm\": \"guidedbackprop\", 'visualizations': True, 'attributions': False}\n",
+    "xai_parameters = {\"xai_algorithm\": \"guidedbackprop\",\n",
+    "                  'visualizations': True, 'attributions': False}\n",
     "\n",
+    "# Create request json\n",
     "request_json = {\n",
-    "    \n",
+    "\n",
     "    \"input_data\": {\n",
     "        \"columns\": [\"image_details\"],\n",
     "        \"data\": [[{'image': base64.encodebytes(read_image(sample_image)).decode(\"utf-8\"),\n",
     "                   \"model_explainability\": model_explainability,\n",
     "                   'xai_parameters': xai_parameters}]],\n",
     "    }\n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -1180,12 +1182,12 @@
    "outputs": [],
    "source": [
     "resp = ml_client.online_endpoints.invoke(\n",
-    "                                        endpoint_name=online_endpoint_name,\n",
-    "                                        deployment_name=deployment.name,\n",
-    "                                        request_file=request_file_name,\n",
-    "                                    )\n",
+    "    endpoint_name=online_endpoint_name,\n",
+    "    deployment_name=deployment.name,\n",
+    "    request_file=request_file_name,\n",
+    ")\n",
     "predictions = json.loads(resp)\n",
-    "predictions"
+    "predictions\n"
    ]
   },
   {
