--- a/sdk/jobs/automl-standalone-jobs/automl-image-classification-multilabel-task-fridge-items/automl-image-classification-multilabel-task-fridge-items-mlflow.ipynb
+++ b/sdk/jobs/automl-standalone-jobs/automl-image-classification-multilabel-task-fridge-items/automl-image-classification-multilabel-task-fridge-items-mlflow.ipynb
@@ -1134,15 +1134,18 @@
     "\n",
     "# Define explainability (XAI) parameters\n",
     "model_explainability = True\n",
-    "xai_parameters = {\"xai_algorithm\": \"guidedbackprop\", \"confidence_score_threshold_multilabel\": 0.8}\n",
+    "xai_parameters = {\"xai_algorithm\": \"guidedbackprop\",\n",
+    "                  \"confidence_score_threshold_multilabel\": 0.8}\n",
     "\n",
     "request_json = {\n",
-    "    \n",
+    "\n",
     "    \"input_data\": {\n",
     "        \"columns\": [\"image_details\"],\n",
-    "        \"data\": [[{'image': base64.encodebytes(read_image(sample_image)).decode(\"utf-8\"), \"model_explainability\": model_explainability, 'xai_parameters': xai_parameters}]],\n",
+    "        \"data\": [[{'image': base64.encodebytes(read_image(sample_image)).decode(\"utf-8\"),\n",
+    "                   \"model_explainability\": model_explainability,\n",
+    "                   'xai_parameters': xai_parameters}]],\n",
     "    }\n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -1166,10 +1169,10 @@
    "outputs": [],
    "source": [
     "resp = ml_client.online_endpoints.invoke(\n",
-    "                                        endpoint_name=online_endpoint_name,\n",
-    "                                        deployment_name=deployment.name,\n",
-    "                                        request_file=request_file_name,\n",
-    "                                    )\n",
+    "    endpoint_name=online_endpoint_name,\n",
+    "    deployment_name=deployment.name,\n",
+    "    request_file=request_file_name,\n",
+    ")\n",
     "predictions = json.loads(resp)"
    ]
   },
