--- a/sdk/resources/compute/compute.ipynb
+++ b/sdk/resources/compute/compute.ipynb
@@ -55,7 +55,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {"name": "subscription_id"},
+   "metadata": {
+    "name": "subscription_id"
+   },
    "outputs": [],
    "source": [
     "# Enter details of your AML workspace\n",
@@ -67,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {"name": "ml_client"},
+   "metadata": {
+    "name": "ml_client"
+   },
    "outputs": [],
    "source": [
     "# get a handle to the workspace\n",
@@ -98,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {"name": "ci_minimal"},
+   "metadata": {
+    "name": "ci_minimal"
+   },
    "outputs": [],
    "source": [
     "# Compute Instances need to have a unique name across the region.\n",
@@ -123,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {"name": "ci_basic"},
+   "metadata": {
+    "name": "ci_basic"
+   },
    "outputs": [],
    "source": [
     "# Compute Instances need to have a unique name across the region.\n",
@@ -140,6 +148,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 2.3 Interact with a Compute Instance\n",
+    "In this below cells, we will specify how you can perform basic operations on a Compute Instance. A full list of operations can be found here. Note that the below operations are applicable for all computes (not just compute instances)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {"name": "ci_basic_state"},
+   "outputs": [],
+   "source": [
+    "from azure.ai.ml.entities import ComputeInstance, AmlCompute\n",
+    "\n",
+    "# Get compute\n",
+    "ci_basic_state = ml_client.compute.get(ci_basic_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {"name": "stop_compute"},
+   "outputs": [],
+   "source": [
+    "from azure.ai.ml.entities import ComputeInstance, AmlCompute\n",
+    "\n",
+    "# Stop compute\n",
+    "ml_client.compute.begin_stop(ci_basic_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(120)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {"name": "start_compute"},
+   "outputs": [],
+   "source": [
+    "from azure.ai.ml.entities import ComputeInstance, AmlCompute\n",
+    "\n",
+    "# Start compute\n",
+    "ml_client.compute.begin_start(ci_basic_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(120)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {"name": "restart_compute"},
+   "outputs": [],
+   "source": [
+    "from azure.ai.ml.entities import ComputeInstance, AmlCompute\n",
+    "\n",
+    "# Restart compute\n",
+    "ml_client.compute.begin_restart(ci_basic_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2.3 Clean up Resources\n",
     "Clean up the Compute Instances to save costs"
    ]
@@ -150,7 +232,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ml_client.compute.begin_delete(ci_minimal_name)\n",
+    "from azure.ai.ml.entities import ComputeInstance, AmlCompute\n",
+    "\n",
+    "ml_client.compute.begin_delete(ci_minimal_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {"name": "delete_compute"},
+   "outputs": [],
+   "source": [
+    "from azure.ai.ml.entities import ComputeInstance, AmlCompute\n",
+    "\n",
     "ml_client.compute.begin_delete(ci_basic_name)"
    ]
   },
@@ -178,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {"name": "cluster_basic"},
+   "metadata": {
+    "name": "cluster_basic"
+   },
    "outputs": [],
    "source": [
     "from azure.ai.ml.entities import AmlCompute\n",
@@ -206,7 +302,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {"name": "cluster_low_pri"},
+   "metadata": {
+    "name": "cluster_low_pri"
+   },
    "outputs": [],
    "source": [
     "from azure.ai.ml.entities import AmlCompute\n",
@@ -227,13 +325,10 @@
   "description": {
    "description": "Create compute in Azure ML workspace"
   },
-  "interpreter": {
-   "hash": "66962d4c952b5ba37638a017d6cc83bab37d76f69b13c17d86b9f71233a0aa71"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10 - SDK V2",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
-   "name": "python310-sdkv2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -245,7 +340,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "52018653a280796ddf8e50b3c9e20a616cd949148570d3142cd79b620301346b"
+   }
   }
  },
  "nbformat": 4,
