--- a/tutorials/get-started-notebooks/train-model.ipynb
+++ b/tutorials/get-started-notebooks/train-model.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Day 1: Train a model\n",
     "\n",
-    "Learn how a data scientist uses Azure Machine Learning (Azure ML) to train a model.  In this example, we use the associated credit card dataset to show how you can use AutoML for a classification problem. The goal is to predict if a customer has a high likelihood of defaulting on a credit card payment.\n",
+    "Learn how a data scientist uses Azure Machine Learning (Azure ML) to train a model.  In this example, we use the associated credit card dataset to show how you can use Azure Machine Learning for a classification problem. The goal is to predict if a customer has a high likelihood of defaulting on a credit card payment.\n",
     "\n",
     "The training script handles the data preparation, then trains and registers a model. This tutorial takes you through steps to submit a cloud-based training job (command job). If you would like to learn more about how to load your data into Azure, see [Create data assets](how-to-create-data-assets.md). \n",
     "\n",
@@ -552,7 +552,7 @@
     "When you run the cell, the notebook output shows a link to the job's details page on Azure Studio. Alternatively, you can also select Jobs on the left navigation menu. A job is a grouping of many runs from a specified script or piece of code. Information for the run is stored under that job. The details page gives an overview of the job, the time it took to run, when it was created, etc. The page also has tabs to other information about the job such as metrics, Outputs + logs, and code. Listed below are the tabs available in the job's details page:\n",
     "\n",
     "* Overview: The overview section provides basic information about the job, including its status, start and end times, and the type of job that was run\n",
-    "* Inputs: The input section lists the data and code that were used as inputs for the job. This section can include datasets, scripts, environment configurations, and other resources that were used during training. \n",
+    "* Code: The code section lists the data and code that were used as inputs for the job. This section can include datasets, scripts, environment configurations, and other resources that were used during training. \n",
     "* Outputs + logs: The Outputs + logs tab contains logs generated while the job was running. This tab assists in troubleshooting if anything goes wrong with your training script or model creation.\n",
     "* Metrics: The metrics tab showcases key performance metrics from your model such as training score, f1 score, and precision score. "
    ]
