--- a/tutorials/get-started-notebooks/train-model.ipynb
+++ b/tutorials/get-started-notebooks/train-model.ipynb
@@ -196,7 +196,7 @@
     "\n",
     "To run your AzureML job on your compute resource, you need an [environment](https://learn.microsoft.com/articles/machine-learning/concept-environments). An environment lists the software runtime and libraries that you want installed on the compute where you’ll be training. It's similar to your python environment on your local machine.\n",
     "\n",
-    "AzureML provides many curated or ready-made environments, which are useful for common training and inference scenarios. You can also create your own custom environments using a docker image, or a conda configuration.\n",
+    "AzureML provides many curated or ready-made environments, which are useful for common training and inference scenarios. \n",
     "\n",
     "In this example, you'll create a custom conda environment for your jobs, using a conda yaml file.\n",
     "\n",
@@ -518,7 +518,7 @@
    "source": [
     "## Submit the job \n",
     "\n",
-    "It's now time to submit the job to run in Azure Machine Learning studio. This time you'll use `create_or_update`  on `ml_client.jobs`. "
+    "It's now time to submit the job to run in Azure Machine Learning studio. This time you'll use `create_or_update`  on `ml_client.jobs`. `ml_client` is a client class that allows you to connect to your Azure subscription using Python and interact with Azure ML services. `ml_client.jobs` allows your to submit your jobs using Python."
    ]
   },
   {
@@ -591,7 +591,10 @@
     "\n",
     "If you would like to learn more about different ways to train models in Azure Machine Learning, see [What is automated machine learning (AutoML)?](https://learn.microsoft.com/articles/machine-learning/concept-automated-ml). Automated ML is a supplemental tool to reduce the amount of time a data scientist spends finding a model that works best with their data.\n",
     "\n",
-    "If you would like more examples similar to this tutorial, see [**Samples**](https://learn.microsoft.com/articles/machine-learning/quickstart-create-resources#learn-from-sample-notebooks) section of studio. These same samples are available at our [GitHub examples page.](https://github.com/Azure/azureml-examples) The examples include complete Python Notebooks that you can run code and learn to train a model. You can modify and run  existing scripts from the samples, containing scenarios including classification, natural language processing, and anomaly detection. "
+    "If you would like more examples similar to this tutorial, see [**Samples**](https://learn.microsoft.com/articles/machine-learning/quickstart-create-resources#learn-from-sample-notebooks) section of studio. These same samples are available at our [GitHub examples page.](https://github.com/Azure/azureml-examples) The examples include complete Python Notebooks that you can run code and learn to train a model. You can modify and run  existing scripts from the samples, containing scenarios including classification, natural language processing, and anomaly detection. ",
+    "\n",
+    "To train models by creating your own custom environments using a [docker image,](how-to-manage-environments-v2.md#create-an-environment-from-a-docker-build-context)."
+   
    ]
   }
  ],
